# Echo

./: .dockerignore  .env.example  .gitignore  INTEGRATION_SUMMARY.md  LLM_INTEGRATION.md  README.md  docker-compose.yml  echography.pem  package-lock.json  readme.md  setup-ollama.sh  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  run_dagit.sh
.github/workflows/: ci.yml
.tmp_dagster_home_zj3qzcmu/history/: runs.db
.tmp_dagster_home_zj3qzcmu/schedules/: schedules.db
DB/: dockerfile  init.sql
api/: Dockerfile  package-lock.json  package.json  tsconfig.json
api/src/: index.ts
backend/: .env.example  .gitingore  CMakeLists.txt  Dockerfile.dev  app.js  dockerfile  main.cpp  package-lock.json  package.json  pipeline.md  requirements.txt
backend/app/: __init__.py  db.py  models.py  routes.py  schemas.py
backend/config/: database.js  openai.js
backend/include/services/: CodeAnalyzer.h  DocumentationService.h  GitHubService.cpp  GitHubService.h  LLMService.h  PromptTemplates.h  ScannerService.h
backend/include/utils/: ModelSelector.h  SystemDetector.h
backend/middleware/: auth.js  errorHandler.js
backend/models/: AnalysisResult.js  Documentation.js  Repository.js  User.js
backend/routes/: auth.js  repositories.js
backend/services/: aiService.js  documentationService.js  fileService.js  githubService.js
backend/src/: main.cpp  server.js
be/: .dockerignore  .env  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
be/src/: config.ts  database.ts  db.ts  index.ts  server.ts
db/: init.sql
fe/: .eslintrc.json  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
fe/nginx-config/: default.conf
fe/src/: App.css  App.tsx  MyErrorBoundary.tsx  main.tsx  router.tsx
frontend/: .dockerignore  .env.local.example  Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: prerender-manifest.json  trace
frontend/app/: global.css  globals.css  page.js  (+2 more)
infra/: db-init.sql  nginx.conf
pipeline/: .gitignore  Dockerfile  config.yaml  main.py  pipeline.py  requirements.txt  run_pipeline.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+97 files in other folders)
